<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_gradient_top_down"
    tools:context=".MyProfileInfoActivity">


    <Button
        android:id="@+id/profile_info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:text="@string/profile_info_text"
        app:layout_constraintEnd_toStartOf="@+id/profile_friends_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_friends_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/profile_friends_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/profile_info_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="85dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="lejdidzu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_button"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profile_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="Julija"
        app:layout_constraintStart_toEndOf="@+id/profile_first_name_fixed"
        app:layout_constraintTop_toBottomOf="@+id/profile_username" />

    <TextView
        android:id="@+id/profile_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="Pancic"
        app:layout_constraintStart_toEndOf="@+id/profile_last_name_fixed"
        app:layout_constraintTop_toBottomOf="@+id/profile_first_name" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="0631231997"
        app:layout_constraintStart_toEndOf="@+id/profile_phone_fixed"
        app:layout_constraintTop_toBottomOf="@+id/profile_last_name" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="julijapancic1@gmail.com"
        app:layout_constraintStart_toEndOf="@+id/profile_email_fixed"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone" />

    <TextView
        android:id="@+id/profile_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="julija123"
        app:layout_constraintStart_toEndOf="@+id/profile_password_fixed"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <Button
        android:id="@+id/profile_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="Edit profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password" />

    <TextView
        android:id="@+id/profile_first_name_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/profile_first_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username" />

    <TextView
        android:id="@+id/profile_last_name_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_last_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_first_name_fixed" />

    <TextView
        android:id="@+id/profile_phone_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_phone_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_last_name_fixed" />

    <TextView
        android:id="@+id/profile_email_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_fixed" />

    <TextView
        android:id="@+id/profile_password_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_fixed" />

    <TextView
        android:id="@+id/profile_points_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_points_text"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_champ_image" />

    <TextView
        android:id="@+id/profile_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="300"
        app:layout_constraintStart_toEndOf="@+id/profile_points_fixed"
        app:layout_constraintTop_toBottomOf="@+id/profile_champ_image" />

    <ImageView
        android:id="@+id/profile_champ_image"
        android:layout_width="81dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_button"
        app:srcCompat="@drawable/ic_baseline_emoji_events_24" />
</androidx.constraintlayout.widget.ConstraintLayout>